--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
     "aos": "^2.3.4",
+    "chart.js": "^4.5.1",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
+    "random-words": "^2.0.1",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0",
     "react-scripts": "^5.0.1",
     "typed.js": "^3.0.0"
   },
